# gummy

./: CHANGELOG.md  CMakeLists.txt  README  README.md  third-party.txt
gummy/: CMakeLists.txt
gummy-cli/: CMakeLists.txt
gummy-cli/gummy-cli/: gummy-cli.cpp
gummy/gummy-cli/: CMakeLists.txt
gummy/gummy-cli/gummy-cli/: CMakeLists.txt  gummy-cli.cpp
gummy/gummyd/: CMakeLists.txt  easing.hpp  sdbus-util.hpp
gummy/gummyd/gummyd/: CMakeLists.txt  api.cpp  api.hpp  channel.cpp  channel.hpp  config.cpp  config.hpp  constants.cpp  constants.hpp  core.cpp  core.hpp  ddc.cpp  ddc.hpp  display.cpp  display.hpp  easing.cpp  easing.hpp  file.cpp  file.hpp  gamma.cpp  gamma.hpp  gummyd.cpp  sd-dbus.hpp  sd-sysfs-devices.cpp  sd-sysfs-devices.hpp  sd-sysfs.cpp  sd-sysfs.hpp  sdbus-util.cpp  sdbus-util.hpp  sysfs.cpp  sysfs.hpp  sysfs_devices.cpp  sysfs_devices.hpp  time.cpp  time.hpp  udev.cpp  udev.hpp  utils.cpp  utils.hpp  x11-xcb.cpp  (+3 more)
gummyd/: CMakeLists.txt
gummyd/gummyd/: CMakeLists.txt  api.cpp  api.hpp  channel.cpp  channel.hpp  config.cpp  config.hpp  constants.cpp  constants.hpp  core.cpp  core.hpp  ddc.cpp  ddc.hpp  display.cpp  display.hpp  easing.cpp  easing.hpp  file.cpp  file.hpp  gamma.cpp  gamma.hpp  gummyd.cpp  sd-dbus.cpp  sd-dbus.hpp  sd-sysfs-devices.cpp  sd-sysfs-devices.hpp  sd-sysfs.cpp  sd-sysfs.hpp  time.cpp  time.hpp  utils.cpp  utils.hpp  x11-xcb.cpp  x11-xcb.hpp
include/: cfg.hpp  channel.hpp  config.hpp  core.hpp  dbus.hpp  defs.hpp  display.hpp  easing.hpp  file.hpp  gamma.hpp  screenctl.hpp  server.hpp  sysfs.hpp  sysfs_devices.hpp  time.hpp  utils.hpp  xcb.hpp  xlib.hpp  xorg.hpp
src/common/: defs.h  utils.cpp  utils.h
src/gummy/: CMakeLists.txt  gummy.cpp
src/gummyd/: CMakeLists.txt  cfg.cpp  cfg.h  config.cpp  core.cpp  display.cpp  gamma.cpp  gummyd.cpp  screenctl.cpp  screenctl.h  server.cpp  sysfs.cpp  sysfs.h  sysfs_devices.cpp  xorg.cpp
